--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,8 @@
   "version": "0.1",
   "permissions": [
     "tabs",
-    "activeTab"
+    "activeTab",
+    "storage"
     ],
   "content_scripts": [
     {
@@ -21,5 +22,5 @@
   "background": {
     "scripts": ["background.js"]
   },
-  "web_accessible_resources": ["back.png", "cancel.png"]
+  "web_accessible_resources": ["back.png", "cancel.png", "home.png", "heart.png"]
 }
