--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,10 @@
   "permissions": [
     "tabs",
     "activeTab",
-    "storage"
+    "storage",
+    "webRequest",
+    "webNavigation",
+    "webRequestBlocking"
     ],
   "content_scripts": [
     {
